...

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:id="@+id/list_view"


        />


</LinearLayout>
