...
    android:layout_margin="10dp">


    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:id="@+id/RelativeLayoutSize"
        android:padding="10dp"
        android:clickable="false"
        android:focusable="false"
        android:background="@drawable/backgroudcard">

        <ImageButton
...
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_share_24" />

        <ImageButton
            android:id="@+id/reportBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/shareBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
...
